# WebSockBridge

./: .gitignore  CMakeLists.txt  main.cpp
bridge/headers/: bridge.h  safeguards.h  user_aggregator.h
bridge/src/: bridge.cpp  safeguards.cpp  user_aggregator.cpp
web/: app.js  chat.html  index.html
